--- a/Watchman.AwsResources/Watchman.AwsResources.csproj
+++ b/Watchman.AwsResources/Watchman.AwsResources.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="AWSSDK.ElasticLoadBalancingV2" Version="3.3.101.3" />
     <PackageReference Include="AWSSDK.Lambda" Version="3.3.100.5" />
     <PackageReference Include="AWSSDK.RDS" Version="3.3.100.5" />
+    <PackageReference Include="AWSSDK.SageMaker" Version="3.3.105.1" />
     <PackageReference Include="AWSSDK.StepFunctions" Version="3.3.100.5" />
   </ItemGroup>
   <ItemGroup>
